--- a/packages/blog-starter-kit/themes/enterprise/package.json
+++ b/packages/blog-starter-kit/themes/enterprise/package.json
@@ -12,6 +12,8 @@
 	},
 	"dependencies": {
 		"@graphql-typed-document-node/core": "^3.2.0",
+		"@heroicons/react": "^2.1.3",
+		"@material-tailwind/react": "^2.1.9",
 		"@radix-ui/react-dialog": "^1.0.5",
 		"@radix-ui/react-dropdown-menu": "^2.0.6",
 		"@radix-ui/react-popover": "^1.0.7",
@@ -19,6 +21,7 @@
 		"@starter-kit/utils": "workspace:*",
 		"@tailwindcss/typography": "^0.5.10",
 		"@vercel/og": "^0.5.18",
+		"clsx": "^2.1.0",
 		"date-fns": "^2.30.0",
 		"graphql-request": "^6.1.0",
 		"gray-matter": "^4.0.3",
